# Happy_Little_Students

./: CMakeLists.txt  README.md  main.c
structs/: cartaCFU.h  cartaOstacolo.h  cartaOstacoloEstratta.h  giocata.h  giocatore.h  personaggio.h
subroutines/faseDue/: faseDue.c  faseDue.h
subroutines/faseDue/inizioTurno/: inizioTurno.c  inizioTurno.h
subroutines/faseDue/inizioTurno/printNumeroTurno/: printNumeroTurno.c  printNumeroTurno.h
subroutines/faseDue/inizioTurno/stampaCartaOstacolo/: stampaCartaOstacolo.c  stampaCartaOstacolo.h
subroutines/faseDue/turnoAzioni/: turnoAzioni.c  turnoAzioni.h
subroutines/faseDue/turnoAzioni/aggiornaPunteggioTemporaneo/: aggiornaPunteggioTemporaneo.c  aggiornaPunteggioTemporaneo.h
subroutines/faseDue/turnoAzioni/rivelazioneCarteTurno/: rivelazioneCarteTurno.c  rivelazioneCarteTurno.h
subroutines/faseDue/turnoAzioni/sceltaAzione/: sceltaAzione.c  sceltaAzione.h
subroutines/faseDue/turnoAzioni/sceltaAzione/controllaCartePunto/: controllaCartePunto.c  controllaCartePunto.h
subroutines/faseDue/turnoAzioni/sceltaAzione/controlloStatoTurno/: controlloStatoTurno.c  controlloStatoTurno.h
subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/: giocaCarta.c  giocaCarta.h
subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/memorizzaCarteGiocateNelTurno/: memorizzaCarteGiocateNelTurno.c  memorizzaCarteGiocateNelTurno.h
subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/rimuoviCartaCFU/: rimuoviCartaCFU.c  rimuoviCartaCFU.h
subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/stampaCarteCFU/: stampaCarteCFU.c  stampaCarteCFU.h
subroutines/faseDue/turnoAzioni/sceltaAzione/scartaTutteCarteCFU/: scartaTutteCarteCfu.c  scartaTutteCarteCfu.h
subroutines/faseDue/turnoAzioni/sceltaAzione/stampaPlanciaPersonaggio/: stampaPlanciaGiocatore.c  stampaPlanciaGiocatore.h
subroutines/faseTre/: faseTre.c  faseTre.h
subroutines/faseTre/applicoEffettiCarteCfu/: applicoEffettiCarteCfu.c  applicoEffettiCarteCfu.h
subroutines/faseTre/calcoloPunteggio/: calcoloPunteggio.c  calcoloPunteggio.h
subroutines/faseTre/condizioniDiVittoria/: condizioniDiVittoria.c  condizioniDiVittoria.h
subroutines/faseTre/controlloGiocatoriPerdenti/: controlloGiocatoriPerdenti.c  controlloGiocatoriPerdenti.h
subroutines/faseTre/risolviPareggio/: risolviPareggio.c  risolviPareggio.h
subroutines/faseTre/risolviPareggio/assegnaCartaOstacoloPerdente/: assegnaCartaOstacoloPerdente.c  assegnaCartaOstacoloPerdente.h
subroutines/faseTre/risolviPareggio/turnoAggiuntivoSpareggio/: turnoAggiuntivoSpareggio.c  turnoAggiuntivoSpareggio.h
subroutines/faseTre/usaCarteCfuIstantanee/: usaCarteCfuIstantanee.c  usaCarteCfuIstantanee.h
subroutines/faseUno/: faseUno.c  faseUno.h
subroutines/faseUno/caricaMazzoCfu/: caricaMazzoCfu.c  caricaMazzoCfu.h
subroutines/faseUno/caricaMazzoOstacoli/: caricaMazzoOstacoli.c  caricaMazzoOstacoli.h
subroutines/faseUno/caricaPersonaggi/: caricaPersonaggi.c  caricaPersonaggi.h
subroutines/faseUno/getMazzoOstacoli/: getMazzoOstacoli.c  getMazzoOstacoli.h
subroutines/faseUno/inizializzaGiocatori/: inizializzaGiocatori.c  inizializzaGiocatori.h
subroutines/faseUno/inizializzaGiocatori/prendiNumeroGiocatori/: prendiNumeroGiocatori.c  prendiNumeroGiocatori.h
subroutines/faseUno/shuffleMazzoCfu/: shuffleMazzoCfu.c  shuffleMazzoCfu.h
subroutines/faseUno/shuffleMazzoOstacoli/: shuffleMazzoOstacoli.c  shuffleMazzoOstacoli.h
subroutines/faseUno/visualizzaPresentazione/: visualizzaPresentazione.c  visualizzaPresentazione.h
subroutines/misclibs/: misclibs.c  misclibs.h
subroutines/misclibs/gestioneLog/: gestioneLog.c  gestioneLog.h
subroutines/misclibs/gestioneLog/logOrario/: logOrario.c  logOrario.h
subroutines/misclibs/gestioneSalvataggi/caricaSalvataggio/: caricaSalvataggio.c  caricaSalvataggio.h
subroutines/misclibs/gestioneSalvataggi/salvaPartita/: salvaPartita.c  salvaPartita.h
