cmake_minimum_required(VERSION 3.26)
project(Happy_Little_Students_V0_3 C)

set(CMAKE_C_STANDARD 99)

add_executable(Happy_Little_Students_V0_3 main.c
        subroutines/misclibs/misclibs.c
        subroutines/misclibs/misclibs.h
        subroutines/faseUno/faseUno.c
        subroutines/faseUno/faseUno.h
        subroutines/faseUno/visualizzaPresentazione/visualizzaPresentazione.c
        subroutines/faseUno/shuffleMazzoOstacoli/shuffleMazzoOstacoli.c
        subroutines/faseUno/shuffleMazzoCfu/shuffleMazzoCfu.c
        subroutines/faseUno/inizializzaGiocatori/inizializzaGiocatori.c
        subroutines/faseUno/inizializzaGiocatori/prendiNumeroGiocatori/prendiNumeroGiocatori.c
        subroutines/faseUno/getMazzoOstacoli/getMazzoOstacoli.c
        subroutines/faseUno/caricaPersonaggi/caricaPersonaggi.c
        subroutines/faseUno/caricaMazzoOstacoli/caricaMazzoOstacoli.c
        subroutines/faseUno/caricaMazzoCfu/caricaMazzoCfu.c
        subroutines/faseDue/faseDue.c
        subroutines/faseDue/turnoAzioni/turnoAzioni.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/sceltaAzione.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/giocaCarta.c
        subroutines/faseDue/inizioTurno/inizioTurno.c
        subroutines/faseDue/inizioTurno/stampaCartaOstacolo/stampaCartaOstacolo.c
        subroutines/faseDue/inizioTurno/printNumeroTurno/printNumeroTurno.c
        subroutines/faseTre/faseTre.c
        subroutines/faseTre/calcoloPunteggio/calcoloPunteggio.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/stampaCarteCFU/stampaCarteCFU.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/stampaCarteCFU/stampaCarteCFU.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/rimuoviCartaCFU/rimuoviCartaCFU.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/rimuoviCartaCFU/rimuoviCartaCFU.h
        structs/giocata.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/memorizzaCarteGiocateNelTurno/memorizzaCarteGiocateNelTurno.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/giocaCarta/memorizzaCarteGiocateNelTurno/memorizzaCarteGiocateNelTurno.h
        subroutines/faseDue/turnoAzioni/rivelazioneCarteTurno/rivelazioneCarteTurno.c
        subroutines/faseDue/turnoAzioni/rivelazioneCarteTurno/rivelazioneCarteTurno.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/controlloStatoTurno/controlloStatoTurno.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/controlloStatoTurno/controlloStatoTurno.h
        structs/cartaOstacoloEstratta.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/controllaCartePunto/controllaCartePunto.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/controllaCartePunto/controllaCartePunto.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/scartaTutteCarteCFU/scartaTutteCarteCfu.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/scartaTutteCarteCFU/scartaTutteCarteCfu.h
        subroutines/faseTre/applicoEffettiCarteCfu/applicoEffettiCarteCfu.c
        subroutines/faseTre/applicoEffettiCarteCfu/applicoEffettiCarteCfu.h
        subroutines/faseDue/turnoAzioni/aggiornaPunteggioTemporaneo/aggiornaPunteggioTemporaneo.c
        subroutines/faseDue/turnoAzioni/aggiornaPunteggioTemporaneo/aggiornaPunteggioTemporaneo.h
        subroutines/faseTre/usaCarteCfuIstantanee/usaCarteCfuIstantanee.c
        subroutines/faseTre/usaCarteCfuIstantanee/usaCarteCfuIstantanee.h
        subroutines/faseTre/risolviPareggio/risolviPareggio.c
        subroutines/faseTre/risolviPareggio/risolviPareggio.h
        subroutines/faseTre/risolviPareggio/turnoAggiuntivoSpareggio/turnoAggiuntivoSpareggio.c
        subroutines/faseTre/risolviPareggio/turnoAggiuntivoSpareggio/turnoAggiuntivoSpareggio.h
        subroutines/faseTre/risolviPareggio/assegnaCartaOstacoloPerdente/assegnaCartaOstacoloPerdente.c
        subroutines/faseTre/risolviPareggio/assegnaCartaOstacoloPerdente/assegnaCartaOstacoloPerdente.h
        subroutines/faseTre/controlloGiocatoriPerdenti/controlloGiocatoriPerdenti.c
        subroutines/faseTre/controlloGiocatoriPerdenti/controlloGiocatoriPerdenti.h
        subroutines/faseTre/condizioniDiVittoria/condizioniDiVittoria.c
        subroutines/faseTre/condizioniDiVittoria/condizioniDiVittoria.h
        subroutines/misclibs/gestioneLog/gestioneLog.c
        subroutines/misclibs/gestioneLog/gestioneLog.h
        subroutines/misclibs/gestioneLog/logOrario/logOrario.c
        subroutines/misclibs/gestioneLog/logOrario/logOrario.h
        subroutines/misclibs/gestioneSalvataggi/salvaPartita/salvaPartita.c
        subroutines/misclibs/gestioneSalvataggi/salvaPartita/salvaPartita.h
        subroutines/misclibs/gestioneSalvataggi/caricaSalvataggio/caricaSalvataggio.c
        subroutines/misclibs/gestioneSalvataggi/caricaSalvataggio/caricaSalvataggio.h
        subroutines/faseDue/turnoAzioni/sceltaAzione/stampaPlanciaPersonaggio/stampaPlanciaGiocatore.c
        subroutines/faseDue/turnoAzioni/sceltaAzione/stampaPlanciaPersonaggio/stampaPlanciaGiocatore.h
)
